Changes to make things work under macos - there's now a taverna.dotlocation property which if set should contain the full absolute path to the dot executable
git-svn-id: http://taverna.googlecode.com/svn@506 bf327186-88b3-11dd-a302-d386e5130c1c